--- a/assets/video_looper.ini
+++ b/assets/video_looper.ini
@@ -19,8 +19,8 @@
 # streams, but loops videos seamlessly if one video is played more than once.
 # The image_player only displays images and for the duration configured in this file under the "image_player" section.
 # The default is omxplayer.
-video_player = omxplayer
-#video_player = hello_video
+#video_player = omxplayer
+video_player = hello_video
 #video_player = image_player
 
 # File Reader Location
@@ -31,9 +31,9 @@ video_player = omxplayer
 # card for media files.  
 # Note that you still need to change the directory by modifying the setting in
 # the [directory] section below.  The default is usb_drive.
-file_reader = usb_drive
+#file_reader = usb_drive
 #file_reader = directory
-#file_reader = usb_drive_copymode
+file_reader = usb_drive_copymode
 
 # Note on usb_drive_copymode:
 # If you enable this mode, media files are copied from the USB stick to the path 
@@ -45,11 +45,11 @@ file_reader = usb_drive
 # displayed, like the number of media files loaded or if it's waiting to load them.
 # Default is true to display these messages, but can be set to false to disable
 # them entirely.
-osd = true
-#osd = false
+#osd = true
+osd = false
 
 # Below you can set for how many secounds the osd (and countdown) is displayed after files are found
-countdown_time = 5
+countdown_time = 0
 
 # Below you can set a wait time (in seconds) that is waited between each video.
 # wait time is not honored for the first video that plays after starting a new playlist (e.g. after plugging in usb drive)
@@ -133,7 +133,7 @@ copyloader = false
 # default is videopi - you should consider changing it - 
 # if it is empty no check will be performed
 # for maximum compatibility use only ascii characters
-password = videopi
+password = buril_ewb
 
 
 [playlist]
