Changing the way the sync button works.

--- a/assets/video_looper.ini
+++ b/assets/video_looper.ini
@@ -108,7 +108,7 @@ readonly = true
 [directory]
 # The path to search for movies when using the directory file reader.
 # (see the file_reader section above to enable it)
-path = /home/pi/video
+path = /home/buril/video
 
 
 # Copy-mode file reader configuration follows.
